# lob-chatbot-sample

./: .env.template  .gitignore  Makefile  README.md  blog_post.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: migrate.prompt.md
.github/workflows/: chatbot-eval.yml  ci.yml
app/chatbot/: agent_factory.py  chat_simulator.py  chatbot.py  factory.py  root_path.py  support_ticket_agent.py  ui.py
app/chatbot/data_models/: ticket_models.py
app/chatbot/plugins/: common_plugin.py
app/chatbot/test/: test_end_to_end_workflows.py
app/chatbot/workflow-definitions/: support-ticket-workflow.txt
docs/architecture/: support-ticket-chatbot-architecture.md  support-ticket-workflow.md
docs/evaluation/: README.md  evaluation-framework.md
docs/notes/: 20240509-chatbot-eval-dataset-generation-notes.md  20240509-chatbot-eval-dataset-generation.md
docs/plans/: 20240509-chatbot-eval-dataset-generation.md
docs/user-guide/: support-ticket-chatbot-user-guide.md
evaluation/: common.py  evaluation_service.py
evaluation/chatbot/: error_analysis_chatbot.ipynb  eval_target.py  evaluate.py  models.py  root_path.py
evaluation/chatbot/evaluators/: compare.py  evaluator.py  function_call_evaluator.py  function_call_precision.py  function_call_recall.py  function_call_reliability.py  matching.py
evaluation/chatbot/ground-truth/: README.md  dummy_action_items.csv  dummy_support_ticket_data.csv  dummy_support_tickets.csv  generate_eval_dataset.py  support_ticket_eval_dataset.json  test_scenarios_templates.json
(+14 files in other folders)
